[package]
name = "expender"
version = "0.1.0"
authors = ["lyh_neo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
sha3 = "0.8.2"
wasm-bindgen = "0.2"
rust-crypto = "0.2.36"